--- a/app/src/main/res/layout/ideation_list_item.xml
+++ b/app/src/main/res/layout/ideation_list_item.xml
@@ -26,22 +26,13 @@
             app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
     />
-    <Button
-            android:text="ga naar Ideation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/IdeaVote"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitel" android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.18"/>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/IdeaVote"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            android:background="@color/colorCard">
+            android:background="@color/colorCard" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvExtraInfo">
 
         <TextView
                 android:text="TextView"
