--- a/app/src/main/res/layout/activity_choose_platform.xml
+++ b/app/src/main/res/layout/activity_choose_platform.xml
@@ -28,6 +28,7 @@
                 android:text="@string/first_time_explain"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/firstTimeExplain"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/firstTimeTitle" android:layout_marginTop="16dp"
