--- a/app/src/main/res/layout/activity_choose_platform.xml
+++ b/app/src/main/res/layout/activity_choose_platform.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
             android:background="@color/white">
 
