--- a/app/src/main/res/layout/fragment_ideation_question.xml
+++ b/app/src/main/res/layout/fragment_ideation_question.xml
@@ -9,6 +9,6 @@
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" android:id="@+id/rvIdeationQuestions"/>
+             android:id="@+id/rvIdeationQuestions"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
